# clio

./: .gitignore  CMakeLists.txt  Notes.md  README.md
Code/: AudioData.cpp  AudioPlayer.cpp  AudioVisualizer.cpp  audioData.cpp  audioPlayer.cpp  main.cpp
Code/Include/: AudioData.h  AudioPlayer.h  AudioVisualizer.h  audioData.h  audioPlayer.h  files.h  internal.h
Meilensteine/: Meilenstein_I.md
Tests/: fileTest.cpp
